added javascript functionalty for taking input

--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Meet-Auto-Leave</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- <h1>Meet Auto Leave</h1> -->
     <div class="container">
-        <div class="heading">Google Meet<br> Auto Leave</div>
-        <!-- <div class="iconExit"></div> -->
-        <hr class="lineBreak">
-        <div class="enter">ENTER TIME:</div>
-        <input type="time" class="inputVal">
-        <div class="fas fa-check"></div>
-        <div class="fas fa-times"></div>
-        <div></div>
-        <div class="fas fa-plane-slash">
-            <div class="hoverText">status</div>
-        </div>
-        <div class="fas fa-plane"></div>
-        <!-- fas fa-plane when working in the bg -->
+      <div class="heading">
+        Google Meet<br />
+        Auto Leave
+      </div>
+      <!-- <div class="iconExit"></div> -->
+      <hr class="lineBreak" />
+      <div class="enter">ENTER TIME:</div>
+      <input type="time" class="inputVal" />
+      <div class="fas fa-check"></div>
+      <div class="fas fa-times"></div>
+      <div></div>
+      <div class="fas fa-plane-slash">
+        <div class="hoverText">status</div>
+      </div>
+      <div class="fas fa-plane"></div>
+      <!-- fas fa-plane when working in the bg -->
+      <span class="made"
+        >Made with <i class="fa fa-heart pulse"></i> by
+        <a href="https://www.instagram.com/anirudh.mitra/" target="_blank"
+          >Anirudh</a
+        >
+      </span>
     </div>
-
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
