--- a/meet-auto-leave/index.html
+++ b/meet-auto-leave/index.html
@@ -10,7 +10,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Meet-Auto-Leave</title>
   </head>
 
@@ -40,6 +40,6 @@
         >
       </span>
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
